--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: RED for Stanford
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Official platform of the RED for Stanford SGWU slate
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/red-for-stanford" # the subpath of your site, e.g. /blog
+url: "https://hkoumans.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
