--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://hkoumans.github.io" # the base hostname & protocol for your site, 
 #github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-minima
+theme: minima
 plugins:
   - jekyll-feed
 include:
