--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://hkoumans.github.io" # the base hostname & protocol for your site, 
 #github_username:  jekyll
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
 include:
@@ -53,3 +53,4 @@ include:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+markdown: kramdown
